# src/honeyhive/_generated/models/PostEventBatchResponse.py
@@ -3,9 +3,9 @@ from typing import *
 from pydantic import BaseModel, Field
 
 
-class CreateEventBatchResponse(BaseModel):
+class PostEventBatchResponse(BaseModel):
     """
-    CreateEventBatchResponse model
+    PostEventBatchResponse model
     """
 
     model_config = {"populate_by_name": True, "validate_assignment": True}
