# src/honeyhive/models/__init__.py
@@ -38,8 +38,6 @@ from honeyhive._generated.models import (
     CreateDatasetRequest,
     CreateDatasetResponse,
     CreateEventBatchRequest,
-    CreateEventBatchResponse,
-    CreateEventResponse,
     CreateModelEvent,
     CreateModelEventBatchRequest,
     CreateModelEventBatchResponse,
@@ -64,8 +62,10 @@ from honeyhive._generated.models import (
     GetExperimentRunResponse,
     GetRunsResponse,
     Metric,
+    PostEventBatchResponse,
     PostEventRequest,
     PostEventRequestBody,
+    PostEventResponse,
     PostExperimentRunRequest,
     PostExperimentRunResponse,
     Project,
@@ -99,8 +99,8 @@ __all__ = [
     "CreateDatasetRequest",
     "CreateDatasetResponse",
     "CreateEventBatchRequest",
-    "CreateEventBatchResponse",
-    "CreateEventResponse",
+    "PostEventBatchResponse",
+    "PostEventResponse",
     "CreateModelEvent",
     "CreateModelEventBatchRequest",
     "CreateModelEventBatchResponse",
